# PaySight

./: Cargo.toml  README.md
.github/workflows/: ci.yml
crates/paysight-cli/: Cargo.toml
crates/paysight-cli/examples/: basic.rs
crates/paysight-cli/src/: args.rs  banner.rs  main.rs  progress.rs  text_output.rs
crates/paysight-core/: Cargo.toml
crates/paysight-core/src/: client.rs  config.rs  detector.rs  error.rs  lib.rs  report.rs
crates/paysight-core/src/signatures/: mod.rs  payment.rs  protection.rs
crates/paysight-report/: Cargo.toml
crates/paysight-report/src/: assets.rs  html.rs  lib.rs  report.css  report.js
docs/: ARCHITECTURE.md
tools/: fetch_logos.sh
