[package]
name = "paysight-cli"
description = "PaySight CLI — scan websites for payment gateways, BNPL providers, wallets, bot mitigation, and fraud-prevention vendors. Outputs text, JSON, or PDF reports."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme = "../../README.md"
keywords = ["paysight", "cli", "stripe", "adyen", "antibot"]
categories = ["command-line-utilities"]

[[bin]]
name = "paysight"
path = "src/main.rs"

[dependencies]
paysight-core.workspace = true
paysight-report.workspace = true
tokio.workspace = true
clap.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
indicatif.workspace = true
console.workspace = true
comfy-table.workspace = true
humantime.workspace = true
colorgrad.workspace = true
