[package]
name = "paysight-report"
description = "JSON / HTML report rendering for PaySight scan results, with embedded vendor logos and animations."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme = "../../README.md"
keywords = ["html", "report", "paysight"]
categories = ["text-processing"]

[dependencies]
paysight-core.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
